[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/OAnQuan/home.png" type="Texture" id=1]
[ext_resource path="res://Assets/OAnQuan/background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/OAnQuan/Bot.gd" type="Script" id=3]
[ext_resource path="res://Scripts/OAnQuan/Board.gd" type="Script" id=4]
[ext_resource path="res://Assets/OAnQuan/arrow_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/OAnQuan/arrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/OAnQuan/home_pressed.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/OAnQuan/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/baloo/Baloo-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/OAnQuan/Rock1.png" type="Texture" id=11]
[ext_resource path="res://Assets/OAnQuan/Rock2.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[node name="OAnQuan" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
stone1 = ExtResource( 11 )
stone2 = ExtResource( 12 )

[node name="Menu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Bot" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.980392 )
margin_right = 1021.0
margin_bottom = 600.0
texture = ExtResource( 2 )

[node name="Grid" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -80.0
margin_right = 250.0
margin_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 200 )
size_flags_stretch_ratio = 0.0

[node name="Mid" type="GridContainer" parent="Grid"]
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
columns = 5

[node name="ButtonRight" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -105.0
margin_right = 206.0
margin_bottom = 5.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="ButtonLeft" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -105.0
margin_right = -15.0
margin_bottom = 75.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )
flip_h = true

[node name="ButtonMenu" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_top = 15.0
margin_right = 24.0
margin_bottom = 66.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )

[node name="Player1" parent="." instance=ExtResource( 9 )]

[node name="Player2" parent="." instance=ExtResource( 9 )]
margin_left = 904.0
margin_right = 904.0

[node name="PopupText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -322.0
margin_top = 50.0
margin_right = 322.0
margin_bottom = 208.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[connection signal="pressed" from="ButtonRight" to="." method="_on_ButtonRight_pressed"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
